@@ -1,0 +1,8 @@
+(* TEST
+  * setup-ocamlc.byte-build-env
+  ** ocamlc.byte
+    compile_only = "false"
+    all_modules = "test.ml"
+  *** run
+*)
+let x = 42
